--- a/ol-archive/dotnet/docs.pt-br/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.pt-br.xlf
+++ b/ol-archive/dotnet/docs.pt-br/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.pt-br.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="pt-br">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4d5fa8592ec69d864bd9a5e6dcfde4c2036dd5c4</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">98f7ab06ef34efd9759d7b8300893a0a81ad5d7e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\contributing.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c9127822ff7348b4635a6aec15ac7249fe7bd1a9</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">42773058969e2a8bed3f47a412dd5a6488c3e6c2</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">80c60505891850bd8c062806b8a2c305e45f28ec</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">03e7d6d475faf86afa0a59c0b028e8561fc28ad4</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -16,11 +16,11 @@
           <source>Using the preview3 folder and sub-folders</source>
           <target state="translated">Usando a pasta preview3 e subpastas</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core tooling Preview 3 release.</source>
-          <target state="translated">Essa pasta é o nó de nível superior que corresponde à pasta ferramentas, mas contém deltas para a versão de Visualização 3 das ferramentas do .NET Core.</target>       </trans-unit>
+          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core Tools RC4 release.</source>
+          <target state="translated">Essa pasta é o nó de nível superior que corresponde à pasta Ferramentas, mas contém deltas para a versão do Ferramentas do .NET Core RC4.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
-          <source>The goal of this separate parallel folder structure is to provide a location for the Preview 3 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
-          <target state="translated">O objetivo dessa estrutura separada de pasta paralela é fornecer um local para o conteúdo relacionado à versão da Visualização 3, que pode ser mesclado com relativa facilidade à estrutura principal ao fornecer versão de alternância no site publicado.</target>       </trans-unit>
+          <source>The goal of this separate parallel folder structure is to provide a location for the RC4 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
+          <target state="translated">O objetivo dessa estrutura separada de pasta paralela é fornecer um local para o conteúdo relacionado à versão do RC4, que pode ser mesclado com relativa facilidade à estrutura principal ao fornecer versão de alternância no site publicado.</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
           <source>The content under this node should be a smaller document set that represents the deltas from the Long Term Support (LTS) release and the latest current release.</source>
           <target state="translated">O conteúdo desse nó deve ser um conjunto menor de documento que representa os deltas da versão de Suporte a Longo Prazo (LTS) e a última versão atual.</target>       </trans-unit>
@@ -37,14 +37,14 @@
           <source>Copy the existing content into a parallel folder under this structure.</source>
           <target state="translated">Copie o conteúdo existente para uma pasta paralela nessa estrutura.</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>Make your changes, and add the modified file to the TOC for the Preview 3 release.</source>
-          <target state="translated">Faça as alterações e adicione o arquivo modificado ao sumário para a versão de Visualização 3.</target>       </trans-unit>
+          <source>Make your changes, and add the modified file to the TOC for the RC4 release.</source>
+          <target state="translated">Faça as alterações e adicione o arquivo modificado ao sumário da versão do RC4.</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
           <source>New documents</source>
           <target state="translated">Novos documentos</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>Put the new document in the proper location, and add it to the TOC under the node for the Preview 3 release.</source>
-          <target state="translated">Coloque o novo documento no local apropriado e adicione-o ao sumário sob o nó para a versão de Visualização 3.</target>       </trans-unit>
+          <source>Put the new document in the proper location, and add it to the TOC under the node for the RC4 release.</source>
+          <target state="translated">Coloque o novo documento no local apropriado e adicione-o ao sumário sob o nó da versão do RC4.</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>All current release files should have the following added near the top of the topic:</source>
           <target state="translated">Todos os arquivos da versão atual devem ter o seguinte adicionado à parte superior do tópico:</target>       </trans-unit>
