--- a/ol-archive/dotnet/docs.zh-cn/master/dotnet-core/index.874b2218474cbbb7738dd697aef54bd275718c7c.zh-cn.xlf
+++ b/ol-archive/dotnet/docs.zh-cn/master/dotnet-core/index.874b2218474cbbb7738dd697aef54bd275718c7c.zh-cn.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-cn">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-47f9650" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">76ab06edfed3cb124ac79f0d5d0c3480c0a5f170</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-0ca64c3" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ca9d57a3ef3382c4957de5edb55959f1a3f13ee0</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\testing\index.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bc0ef59fbd363c7bd45967743cb84ee3a8342875</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3b47dc3ff3cdd5518151305efb058c50f3271eb6</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">22a21b10e0303ed46a4bf167b158278ee04b6d79</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c39fcd79da4aefa773e4376166d34e47b1462358</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -79,11 +79,14 @@
           <source>Learn more about unit testing in .NET Core projects:</source>
           <target state="translated">了解有关 .NET Core 项目中的单元测试的详细信息：</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
-          <source>Try this <bpt id="p1">[</bpt>walkthrough creating unit tests with xunit and the .NET CLI<ept id="p1">](unit-testing-with-dotnet-test.md)</ept>.</source>
-          <target state="translated">请尝试<bpt id="p1">[</bpt>使用 xunit 和 .NET CLI 创建单元测试的演练<ept id="p1">](unit-testing-with-dotnet-test.md)</ept>。</target>       </trans-unit>
+          <source>Try this <bpt id="p1">[</bpt>walkthrough creating unit tests with xUnit and the .NET CLI<ept id="p1">](unit-testing-with-dotnet-test.md)</ept>.</source>
+          <target state="translated">请尝试<bpt id="p1">[</bpt>使用 xUnit 和 .NET CLI 创建单元测试的演练<ept id="p1">](unit-testing-with-dotnet-test.md)</ept>。</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
-          <source>The XUnit team has written a tutorial that shows <bpt id="p1">[</bpt>how to use xunit with .NET Core and Visual Studio<ept id="p1">](http://xunit.github.io/docs/getting-started-dotnet-core.html)</ept>.</source>
-          <target state="translated">XUnit 团队编写了说明<bpt id="p1">[</bpt>如何将 xunit 与 .NET Core 和 Visual Studio 配合使用<ept id="p1">](http://xunit.github.io/docs/getting-started-dotnet-core.html)</ept>的教程。</target>       </trans-unit>
+          <source>The XUnit team has written a tutorial that shows <bpt id="p1">[</bpt>how to use xUnit with .NET Core and Visual Studio<ept id="p1">](http://xunit.github.io/docs/getting-started-dotnet-core.html)</ept>.</source>
+          <target state="translated">XUnit 团队编写了一个教程，介绍<bpt id="p1">[</bpt>如何通过 .NET Core 和 Visual Studio 使用 xUnit<ept id="p1">](http://xunit.github.io/docs/getting-started-dotnet-core.html)</ept>。</target>       </trans-unit>
+        <trans-unit id="125" translate="yes" xml:space="preserve">
+          <source>If you prefer using MSTest, try the <bpt id="p1">[</bpt>walkthrough creating unit tests with MSTest and the .NET CLI<ept id="p1">](unit-testing-with-mstest.md)</ept>.</source>
+          <target state="translated">如果想使用 MSTest，请尝试<bpt id="p1">[</bpt>演练：使用 MSTest 和 .NET CLI 创建单元测试<ept id="p1">](unit-testing-with-mstest.md)</ept>。</target>       </trans-unit>
       </group>
     </body>
   </file>
