--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/index.b30cf6bccbcaf31708d07e58451f5973b2020242.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/index.b30cf6bccbcaf31708d07e58451f5973b2020242.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-47f9650" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">636c86fed9952542a256c075eb9e388b70cff174</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-0ca64c3" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7be49f3ac7a7806e631eacf5004343919654881e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\versions\index.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">01bf1d460133b249179f1a0fdee6b343cb6298e5</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ab4b7b03e2d80dcce3797240e18146b05d8feeee</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8a5f7522f63cb591d0a9adc186a15d1e6dcd10f3</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">53f5c861effbcb71a5e4990d0bd2649f45aebb5c</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -301,8 +301,8 @@
           <source>A new .NET Core distribution is released with a matching version number to the <ph id="ph1">`Microsoft.NETCore.App`</ph> metapackage.</source>
           <target state="translated">새로운 .NET Core 배포가 <ph id="ph1">`Microsoft.NETCore.App`</ph> 메타패키지와 일치하는 버전 번호로 릴리스됩니다.</target>       </trans-unit>
         <trans-unit id="197" translate="yes" xml:space="preserve">
-          <source>You can see minor updates demonstrated in the project.json examples below.</source>
-          <target state="translated">아래의 project.json 예제에 표시된 부분 업데이트를 확인할 수 있습니다.</target>       </trans-unit>
+          <source>You can see minor updates demonstrated in the following project file:</source>
+          <target state="translated">다음 프로젝트 파일에 표시된 부분 업데이트를 확인할 수 있습니다.</target>       </trans-unit>
         <trans-unit id="198" translate="yes" xml:space="preserve">
           <source>Shipping a major release</source>
           <target state="translated">주 릴리스 전달</target>       </trans-unit>
@@ -325,8 +325,11 @@
           <source>A new .NET Core distribution would be released with a matching version number to the <ph id="ph1">`Microsoft.NETCore.App`</ph> metapackage.</source>
           <target state="translated">새로운 .NET Core 배포가 <ph id="ph1">`Microsoft.NETCore.App`</ph> 메타패키지와 일치하는 버전 번호로 릴리스됩니다.</target>       </trans-unit>
         <trans-unit id="205" translate="yes" xml:space="preserve">
-          <source>You can see major updates demonstrated in the project.json metapackage reference in the example below.</source>
-          <target state="translated">아래 예제의 project.json 메타패키지 참조에 표시된 주요 업데이트를 확인할 수 있습니다.</target>       </trans-unit>
+          <source>You can see major updates demonstrated in the following project file.</source>
+          <target state="translated">다음 프로젝트 파일에 표시된 주요 업데이트를 확인할 수 있습니다.</target>       </trans-unit>
+        <trans-unit id="206" translate="yes" xml:space="preserve">
+          <source>(Note that <ph id="ph1">`netcoreapp2.0`</ph> has not been released.)</source>
+          <target state="translated">(<ph id="ph1">`netcoreapp2.0`</ph>은 릴리스되지 않았습니다.)</target>       </trans-unit>
       </group>
     </body>
   </file>
